EVE CORE
http://almende.github.com/eve/


2013-09-13, version 2.0.0

- Implemented Result Monitor
- Implemented JSON State
- Implemented more strict getters and setters for state.
- Implemented an option `eve_authentication` to turn HTTP authentication on or off.
- Renamed context parameters for the AgentListener from `config` to `eve_config` and
  `authentication` to `eve_authentication`. 


2013-05-02, version 1.1.0

- Introduced advanced data monitoring: subscribe to data changes of other agents.
  Supports both pull and push mechanisms.
- Built-in agent functionality (like scheduler, events, monitor) is moved to separate 
  modules (aspects). Namespacing is introduced to address sub modules via JSON RPC.
- State only accepts Serializable (in most (new) error cases just cast to (Serializable))
- Authorization model introduced, plus HTTPS support
- Restart of AgentFactory now informs agents (agent.boot()), default implementation 
  restarts Scheduler tasks and XMPP connections
- Introduced new ClockScheduler (not yet default), which stores data per agent, 
  i.s.o. in global file
- Introduced "interval" scheduler
- XMPP improvements
- AgentFactory is now initialized from a contextListener (in webapps)
- Agent.getMethods does no longer accept the "asJSON" parameter. The method now
  always returns JSON format and no String format.
- All methods in AgentServlet and SingleAgentServlet are now protected instead
  of private, which makes it easier ot extend these servlets.
- Introduction of "local://" url support, to address agents running on the same host.
- Stability improvements.


2013-03-05, version 1.0.3

-Fixed: Scheduler racecondition on destroyAgent.
-Fixed: Timeouts in HTTP enlarged to 60 seconds (was 10s)


2013-02-28, version 1.0.1

- Fixed: Agent proxy was not capable of returning primitive types, enums, or 
  void.


2013-02-22, version 1.0.0 (0.18)

- Implemented support for a resource name for xmpp connections.