@@ -1,10 +1,0 @@
-# Eve singleagent settings
-
-# The context for reading and writing persistent data
-state:
-  class: FileStateFactory
-  path: .eveagents
-  
-# scheduler settings
-scheduler:
-  class: RunnableScheduler
